# speech-decoding

./: .gitignore  README.md  README.zh-CN.md  pyproject.toml
data/: demo_corpus_for_post_training.json
run/: train.py
run/analyze/: analyze_rank.py  response_latency_analysis.py
run/conf/: analyze.yaml  generate_yaml.yaml  llm_inference.yaml  llm_training.yaml  prepare_data.yaml  train.yaml
run/conf/brain_decoder/: MedFormer.yaml  ModernTCN.yaml  MultiResGRU.yaml  NeuroSketch.yaml
run/conf/dataset/: speech_decoding_base.yaml
run/conf/dir/: local.yaml
run/conf/inference_module/: all_in_two.yaml
run/pipeline/: prepare_data.sh
run/pipeline/brain_decoder/: inference_brain_decoder.sh  training_brain_decoder.sh
run/pipeline/channel_contribution/: inference_all_channel_contribution.sh  summarize_channel_results.py  training_all_channel_contribution.sh
run/prepare_data/: generate_yaml.py  prepare_data.py
src/data_module/: utils.py
src/data_module/augmentation/: __init__.py  add_noise.py  channel_mask.py  mixup.py  random_shift.py  time_masking.py
src/data_module/collate_fn/: __init__.py  simple_collate_fn.py  speech_decoding_collate_fn.py
src/data_module/compute_metrics/: __init__.py  cls_compute_metrics.py  simple_compute_metrics.py
src/data_module/data_func/: __init__.py  speech_decoding.py
src/data_module/dataset/: __init__.py  simple_dataset.py
src/model_module/: utils.py
src/utils/: aux_func.py  get_act.py  get_callback.py  get_checkpoint_aggregation.py  get_optimizer.py  get_schedular.py  get_sentence_inference_results.py  log.py
(+24 files in other folders)
